rushi shinde prod file